--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css">
   
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Gamevity/Assets/CSS/sidebar.css">
     
     <title>Gamevity - Home</title>
 </head>
@@ -12,7 +12,7 @@
         <header>
             <div class="image-text">
                 <span class="image">
-                    <!--<img src="logo.png" alt="">-->
+                    <img src="../Gamevity/Assets/Images/logo.png" alt="">
                 </span>
 
                 <div class="text logo-text">
@@ -76,5 +76,7 @@
     <section class="home">
         <div class="text">Home</div>
     </section>
+
+    <script src="../Gamevity/Assets/JS/sidebar.js"></script>
 </body>
 </html>
