--- a/index.html
+++ b/index.html
@@ -83,5 +83,7 @@
     </section>
 
     <script src="../Gamevity/Assets/JS/sidebar.js"></script>
+    <script src="../Gamevity/Assets/JS/search.js"></script>
+    <script src="../Gamevity/Games/games.js"></script>
 </body>
 </html>
