--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
                 <li class="mode">
                     <div class="sun-moon">
-                        <i class="ti ti-moon moon"></i>
-                        <i class="ti ti-sun-high sun"></i>
+                        <i class="ti ti-moon moon icon"></i>
+                        <i class="ti ti-sun-high sun icon"></i>
                     </div>
                     <span class="mode-text text">Cave Mode</span>
 
